<resources>
    <string name="app_name">Sensors</string>
    <string name="all_sen">All Available Sensors</string>
    <string name="all_sen_details">For All available sensors, see the LogCat results.</string>
    <string name="sen_data">Sensors Data</string>
    <string name="accel_sensor">Accelerometer Data</string>
    <string name="mag_sensor">Magnetometer Data</string>
    <string name="gyro_sensor">Gyroscope Data</string>
    <string name="light_sensor">Ambient Light Data</string>
    <string name="press_sensor">Barometer Data</string>
    <string name="na_data">N/A</string>
</resources>
