<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
        android:layout_width="match_parent">

    <TextView
        android:id="@+id/Main_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_sen"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textSize="10sp"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Main_textView"
        android:ems="10"
        android:enabled="false"
        android:inputType="textMultiLine"
        android:paddingBottom="5dp"
        android:selectAllOnFocus="false"
        android:text="@string/all_sen_details"
        style="@style/DataTextView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/editText"
        android:id="@+id/main_layout_data">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sen_data"
            android:textSize="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accel_sensor"
            android:textSize="10sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp">


            <TextView
                android:id="@+id/sensor_accel_data_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/na_data"
                style="@style/DataTextView"/>
            <TextView
                android:id="@+id/sensor_accel_data_textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/na_data"
                style="@style/DataTextView"/>
            <TextView
                android:id="@+id/sensor_accel_data_textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/na_data"
                style="@style/DataTextView"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mag_sensor"
            android:textSize="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp">


            <TextView
                android:id="@+id/sensor_mag_data_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/na_data"
                style="@style/DataTextView"/>
            <TextView
                android:id="@+id/sensor_mag_data_textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/na_data"
                style="@style/DataTextView"/>
            <TextView
                android:id="@+id/sensor_mag_data_textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/na_data"
                style="@style/DataTextView"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gyro_sensor"
            android:textSize="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/sensor_gyro_data_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/na_data"
                style="@style/DataTextView"/>
            <TextView
                android:id="@+id/sensor_gyro_data_textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/na_data"
                style="@style/DataTextView"/>
            <TextView
                android:id="@+id/sensor_gyro_data_textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/na_data"
                style="@style/DataTextView"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_sensor"
            android:textSize="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/sensor_light_data_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/na_data"
                style="@style/DataTextView"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/press_sensor"
            android:textSize="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sensor_press_data_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/na_data"
                style="@style/DataTextView"/>

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>